--- a/сайт.html
+++ b/сайт.html
@@ -4,6 +4,32 @@
 	<title> Эко-практики Омск</title>
 	</head>
 	<body>
+		<div class="menu">
+		<div class="men">
+
+	
+				<ul>
+					<li>Замени</li>
+				</ul>
+				<ul >
+					<li> Вторая жизнь</li>
+				</ul>
+				<ul >
+					<li>Переработка</li>
+				</ul>
+				<ul >
+					<li>Компостирование</li>
+				</ul>
+		<ul >
+			<li>Пункты приема </li>
+		</ul>
+		<ul >
+			<li>Полезная информация</li>
+		</ul>	
+		</ul>
+	</div>
+	</div>
+
 	<div class="SS">
 	<div class="zed">
 	<h2 class="z">
@@ -72,14 +98,14 @@
 	</div>	
 </div>
 <div class="pod">
-<div class="v">
 
-<a style="height:100%; display:block;" href="about-windows.ru">https://vk.com/danisimooooooo</a>
-<img class="img8" src="62819-logo-computer-instagram-icons-free-frame 1.png" >
+<div class="inst">
+<a id="link" href=""><span>Link text</span></a>
+
 </div>
+<p class="name" align="center" >Воробьева Дана </p>
+<p class="gmail" align="center" > danav8803@gmail.com</p>
 </div>
-	
-	</body>
 
 
 
